# voicecall

./: .gitignore  CMakeLists.txt  README.md  voicecall.pro
lib/src/: CMakeLists.txt  abstractvoicecallhandler.cpp  abstractvoicecallhandler.h  common.cpp  common.h  src.pro  voicecallmanagerinterface.h
lib/src/dbus/: voicecallhandlerdbusadapter.cpp  voicecallhandlerdbusadapter.h  voicecallmanagerdbusadapter.cpp  voicecallmanagerdbusadapter.h
oneshot/: CMakeLists.txt  phone-move-recordings-dir
plugins/: CMakeLists.txt  plugin.pri  plugins.pro
plugins/commhistory/src/: commhistoryplugin.cpp  commhistoryplugin.h  src.pro
plugins/declarative/src/: CMakeLists.txt  qmldir  src.pro  voicecallaudiorecorder.cpp  voicecallaudiorecorder.h  voicecallhandler.cpp  voicecallhandler.h  voicecallmanager.cpp  voicecallmanager.h  voicecallmodel.cpp  voicecallmodel.h  voicecallplugin.cpp  voicecallprovidermodel.cpp  voicecallprovidermodel.h
plugins/filter/: filter.pro
plugins/filter/lib/: filter.cpp  filter.h  filterlist.cpp  filterlist.h  lib.pro
plugins/filter/src/: filter.cpp  filter.h  filterlist.cpp  filterlist.h  filterplugin.cpp  filterplugin.h  src.pro
plugins/filter/tests/: tests.pro  tests.xml  tst_filter.cpp
plugins/mce/src/: CMakeLists.txt  mceplugin.cpp  mceplugin.h  src.pro
plugins/ngf/src/: CMakeLists.txt  ngfringtoneplugin.cpp  ngfringtoneplugin.h  src.pro
plugins/playback-manager/src/: CMakeLists.txt  playbackmanagerplugin.cpp  playbackmanagerplugin.h  src.pro
plugins/providers/: CMakeLists.txt  providers.pro
plugins/providers/ofono/src/: CMakeLists.txt  ofonovoicecallhandler.cpp  ofonovoicecallhandler.h  ofonovoicecallprovider.cpp  ofonovoicecallprovider.h  ofonovoicecallproviderfactory.cpp  ofonovoicecallproviderfactory.h  src.pro
plugins/providers/telepathy/src/: CMakeLists.txt  basechannelhandler.cpp  basechannelhandler.h  callchannelhandler.cpp  callchannelhandler.h  farstreamchannel.cpp  src.pro  streamchannelhandler.cpp  streamchannelhandler.h  telepathyprovider.cpp  telepathyprovider.h  telepathyproviderplugin.cpp  telepathyproviderplugin.h
rpm/: CMakeLists.txt  voicecall-qt5.privileges  voicecall-qt5.spec
src/: CMakeLists.txt  audiocallpolicyproxy.cpp  audiocallpolicyproxy.h  basicringtonenotificationprovider.cpp  basicringtonenotificationprovider.h  basicvoicecallconfigurator.cpp  basicvoicecallconfigurator.h  src.pro  voicecall-manager.service  voicecallmanager.cpp  voicecallmanager.h
src/dbus/: voicecallhandlerdbusadapter.cpp  voicecallhandlerdbusadapter.h  voicecallmanagerdbusadapter.cpp  voicecallmanagerdbusadapter.h  voicecallmanagerdbusservice.cpp  voicecallmanagerdbusservice.h
